--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "phpunit/phpunit": "~4.0"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "~1.8"
+        "fabpot/php-cs-fixer": "~1.8",
+        "maks3w/phpunit-methods-trait": "^4.6"
     },
     "autoload": {
         "psr-4": {
