--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,15 @@ matrix:
   fast_finish: true
   include:
     - php: 5.4
-    - php: 5.5
       env:
-        - EXECUTE_CS_CHECK=true
+        - COMPOSER_ARGUMENTS=--prefer-lowest
+    - php: 5.5
     - php: 5.6
       env:
         - EXECUTE_TEST_COVERALLS=true
-    - php: 7
+    - php: 7.0
+      env:
+        - EXECUTE_CS_CHECK=true
     - php: hhvm
 
 before_install:
@@ -25,7 +27,8 @@ before_install:
   - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then composer require --dev --no-update satooshi/php-coveralls; fi
 
 install:
-  - travis_retry composer install --no-interaction --ignore-platform-reqs
+  - travis_retry composer update --no-interaction $COMPOSER_ARGUMENTS
+  - composer info -i
 
 script:
   - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover clover.xml; fi
@@ -33,4 +36,4 @@ script:
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run; fi
 
 after_script:
-  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then ./vendor/bin/coveralls; fi
+  - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then travis_retry ./vendor/bin/coveralls -v; fi
