--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">= 5.4",
         "psr/http-message": "~1.0",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "^4 || ^5"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.9.*",
